syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.congthanh.project.grpc";

service CategoryService {
  rpc getCategoryById (CategoryRequest) returns (CategoryResponse) {}
}

message CategoryRequest {
  uint64 categoryId = 1;
}

message CategoryResponse {
  uint64 id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  string image = 5;
  string status = 6;
}
